# catalyst

./: .eslintrc.js  .gitignore  .gitmodules  .rustfmt.toml  Anchor.toml  Cargo.toml  README.md  bun.lockb  bunfig.toml  package.json  pnpm-lock.yaml  tsconfig.json
.husky/: commit-msg
Catalyst-contracts/: foundry.toml
Catalyst-contracts/src/: CatalystToken.sol  CrossChainDeposit.sol  ITokenBridge.sol  Structs.sol  SwapHelper.sol
apps/app/: .gitignore  Anchor.toml  Cargo.toml  package.json  tsconfig.json
apps/app/programs/catalyst/: Cargo.toml
apps/app/programs/catalyst/src/: lib.rs
apps/app/src/clients/: EthClient.ts  SolClient.ts
apps/app/src/utils/: TransactionManager.ts
apps/app/src/wormhole/: WormholeClient.ts
apps/app/tests/: catalyst.ts
apps/docs/: app.config.ts  nuxt.config.ts  package.json
apps/docs/components/: Logo.vue
apps/docs/content/: 0.index.md
apps/landing/: package-lock.json  package.json  tailwind.config.ts
apps/landing/app/: page.tsx
apps/landing/components/Input/: SearchBar.tsx
apps/landing/components/assets/: Catalyst.tsx  CrossIcon.tsx  SearchIcon.tsx  index.tsx
apps/landing/components/navbar/: index.tsx
apps/landing/config/: fonts.ts  site.ts
apps/landing/src/app/: layout.tsx  page.tsx
apps/landing/src/components/assets/: Catalyst.tsx  (+2 more)
catalyst/: package.json
contracts/: CatalystTokenBridge.sol
programs/assets-main/: Cargo.toml
programs/assets-main/src/: lib.rs
src/components/: MetaMask.tsx
src/components/eth/: MetaMask.tsx
src/components/solana/: SolanaWallet.tsx
src/lib/: wallets.ts  web3.ts
(+5 files in other folders)
